@@ -11,8 +11,3 @@ plugins {
 }
 
 group = 'io.seqera'
-
-tasks.withType(Test).configureEach {
-    // note: "--enable-preview" is required to use virtual thread on Java 19 and 20
-    jvmArgs(["--enable-preview"])
-}
